fix scrolling on ios 11.3

--- a/src/components/grid/grid.scss
+++ b/src/components/grid/grid.scss
@@ -1,32 +1,14 @@
 .grid {
+  touch-action: none;
   position: relative;
   display: grid;
   grid-template: repeat(6, 1fr) / repeat(6, 1fr);
   grid-gap: 5px;
   width: 320px;
   height: 320px;
-  touch-action: none;
   background: hsl(0, 0%, 25%);
   border: 10px solid hsl(0, 0%, 25%);
   border-radius: 5px;
-  animation: fadeInDown .35s cubic-bezier(0.18, 0.89, 0.32, 1.28);
-
-  &::after {
-    opacity: 0;
-    content: "";
-    pointer-events: none;
-    position: absolute;
-    top: -10px;
-    bottom: -10px;
-    left: -10px;
-    right: -10px;
-    background-color: #000;
-    transition: opacity .2s ease-in-out;
-  }
-
-  &.locked::after {
-    opacity: .12;
-  }
 
   .piece {
     position: relative;
