--- a/src/screens/rules/rules.scss
+++ b/src/screens/rules/rules.scss
@@ -1,7 +1,7 @@
 .rules {
   display: grid;
   grid-row-gap: 1em;
-  margin: 100px auto 0;
+  margin: 2em auto 0;
 
   .accent {
     color: var(--color-cerulean);
