--- a/src/screens/settings/settings.scss
+++ b/src/screens/settings/settings.scss
@@ -1,7 +1,7 @@
 .settings {
   display: grid;
   grid-row-gap: 1em;
-  margin: 100px auto 0;
+  margin: 2em auto 0;
 
   .title {
     line-height: 2em;
